--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,14 +1,14 @@
 // Body
-$body-bg: #f6f6f6;
+$body-bg: #eff2fa;
 
 // Typography
-$font-family-sans-serif: 'Poppins', sans-serif;
-$font-family-serif: 'Jura', serif;
+$font-family-sans-serif: 'Open Sans', sans-serif;
+$font-family-serif: 'Poppins', serif;
 $font-size-base: 0.8rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
+$blue: #0262f8;
 $indigo: #6574cd;
 $purple: #9561e2;
 $pink: #f66d9b;
@@ -19,6 +19,7 @@ $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
 $white: #ffffff;
-$whitesmoke: #eeeeee;
-$primary: #5988fa;
-$danger: #e94153;
+$whitesmoke: #eff2fa;
+$primary: #5d7fd1;
+$danger: #dd527b;
+$black : #000000;
