--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -9,14 +9,13 @@
     //background: url("../images/flower.jpg");
     &.active {
         margin-left: -250px;
-
     }
     position: relative;
     top: 0;
     left: 0;
     overflow-y: auto;
     ul.components {
-        padding: 0;
+        padding: 10px;
     }
     ul {
         li {
@@ -25,26 +24,37 @@
             > ul {
                 margin-left: 10px;
                 li {
+                    padding: 5px;
                     font-size: 16px;
                 }
             }
             a {
-                font-family: $font-family-sans-serif;
-                padding: 5px 0;
+                font-family: $font-family-serif !important;
+                font-weight: $font-weight-normal !important;
+                padding: 5px 15px 5px 15px;
                 display: block;
-                color: rgba(2, 2, 2, 0.8);
+                text-transform: uppercase;
+                color: $white;
                 border-bottom: none;
                 text-decoration: none;
                 &:hover {
-                    color: $primary;
+                    color: $black;
                 }
             }
             &.active {
-                background: $primary;
-                border-radius: 10px;
+                color: #e3eaef;
+                margin: 10px;
+                background: rgba(255, 255, 255, 0.25);
+                -webkit-box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+                box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
+                backdrop-filter: blur(4px);
+                border-radius: 5px;
+                text-transform: uppercase;
                 > a {
                     background: transparent;
                     color: $white;
+                    font-family: $font-family-serif !important;
+                    font-weight: $font-weight-bold !important;
                 }
             }
         }
@@ -53,7 +63,7 @@
         margin-left: -100vw;
         width: 100vw;
         &.active {
-            border-radius: 10px;
+            border-radius: 30px;
             margin-left: 0;
         }
     }
@@ -83,33 +93,36 @@ a[data-toggle="collapse"] {
     }
 }
 
-#btn-logout {
-    /*@include media-breakpoint-up(md) {
-        position: absolute;
-        bottom: 10px;
-    }*/
+.link-child-first{
+    margin-top: 10px;
+}
 
+#btn-logout {
     border-radius: 30px;
     width: 80%;
     position: absolute;
     bottom: 10px;
+    background: $white;
 }
 
 .bg-sidebar {
-    background-size: cover;
-    background: url("../images/family.png") no-repeat center;
+    //background-size: cover;
+    //background: url("../images/family.png") no-repeat center;
+    background:linear-gradient(45deg, #3a86e3 0%, #e54f77 100% );
+    border-radius: 0 30px 30px;
     z-index: -1;
 }
 
-.bg-sidebar:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(250, 250, 250, 0.6);
-    z-index: -2;
-}
+//.bg-sidebar:before {
+//    content: "";
+//    position: absolute;
+//    left: 0;
+//    right: 0;
+//    top: 0;
+//    bottom: 0;
+//    backdrop-filter: blur( 4px );
+//    background: rgba( 200, 200, 200, 0.4 );
+//    z-index: -2;
+//}
 
 
